force-app/main/default/objects/Mix_Item__c/Mix_Item__c.object-meta.xml
<CustomObject>
    <label>商品構成アイテム</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>商品構成アイテム名</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>商品構成アイテム</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>