force-app/main/default/objects/Mix_Item__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <label>商品</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>商品構成アイテム</relationshipLabel>
    <relationshipName>Mix_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>