force-app/main/default/objects/Mix_Item__c/fields/Merchandising_Mix__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Mix__c</fullName>
    <label>商品構成</label>
    <referenceTo>Merchandising_Mix__c</referenceTo>
    <relationshipLabel>商品構成アイテム</relationshipLabel>
    <relationshipName>Mix_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>